<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings">

    <PreferenceCategory android:title="@string/learning_cards">
        // Neue Karten lernen
        <SwitchPreference
            android:defaultValue="@bool/learn_new_cards_randomly_default"
            android:key="@string/learn_new_cards_randomly"
            android:summary="@string/learn_new_cards_randomly_summ"
            android:title="@string/learn_new_cards_randomly_title" />
        // abgelaufene Karten wiederholen
        <ListPreference
            android:defaultValue="@string/repeat_cards_default"
            android:dialogTitle="@string/repeat_cards_mode_title"
            android:entries="@array/repeat_cards_entries"
            android:entryValues="@array/simple_settings_values"
            android:key="@string/repeat_cards_mode"
            android:summary="@string/repeat_cards_summ"
            android:title="@string/repeat_cards_mode_title" />
        // vergessene Karten zurücklegen
        <ListPreference
            android:defaultValue="@string/return_forgotten_cards_default"
            android:dialogTitle="@string/return_forgotten_cards_title"
            android:entries="@array/return_forgotten_cards_entries"
            android:entryValues="@array/simple_settings_values"
            android:key="@string/return_forgotten_cards"
            android:summary="@string/return_forgotten_cards_summ"
            android:title="@string/return_forgotten_cards_title" />
        // Kartenseite zuerst zeigen
        <ListPreference
            android:defaultValue="@string/flip_card_sides_default"
            android:dialogTitle="@string/flip_card_sides_title"
            android:entries="@array/flip_card_sides_entries"
            android:entryValues="@array/simple_settings_values"
            android:key="@string/flip_card_sides"
            android:summary="@string/flip_card_sides_summ"
            android:title="@string/flip_card_sides_title" />
        // Groß/Klein beachten
        <SwitchPreference
            android:defaultValue="@bool/case_sensitive_default"
            android:key="@string/case_sensitive"
            android:summary="@string/case_sensitive_summ"
            android:title="@string/case_sensitive_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/times">
        // UKZG Zeit
        <EditTextPreference
            android:defaultValue="@string/ustm_default"
            android:dialogTitle="@string/ustm_title"
            android:inputType="number"
            android:key="@string/ustm_key"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/ustm_summ"
            android:title="@string/ustm_title" />
        // KZG Zeit
        <EditTextPreference
            android:defaultValue="@string/stm_default"
            android:dialogTitle="@string/stm_title"
            android:inputType="number"
            android:key="@string/stm_key"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/stm_summ"
            android:title="@string/stm_title" />
        // Zeiten ausblenden
        <SwitchPreference
            android:defaultValue="@bool/hide_times_default"
            android:key="@string/hide_times"
            android:summary="@string/hide_times_summ"
            android:title="@string/hide_times_title" />
        // Notification
        <SwitchPreference
            android:defaultValue="@bool/show_notification_default"
            android:key="@string/show_notification"
            android:summary="@string/show_notification_summ"
            android:title="@string/show_notification_title" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="@string/other"
        android:title="@string/other">
        // Autospeichern
        <SwitchPreference
            android:defaultValue="@bool/auto_save_default"
            android:key="@string/auto_save"
            android:summary="@string/auto_save_summ"
            android:title="@string/auto_save_title" />
        // Autosync
        <SwitchPreference
            android:defaultValue="@bool/auto_sync_default"
            android:enabled="false"
            android:key="@string/auto_sync"
            android:summary="@string/auto_sync_disabled_summ"
            android:title="@string/auto_sync_title" />
        // Toast fürs Ablaufdatum
        <SwitchPreference
            android:defaultValue="@bool/expire_toast_default"
            android:key="@string/expire_toast"
            android:summary="@string/expire_toast_summ"
            android:title="@string/expire_toast_title" />
        // Button zum verwalten des DB-Acc
        <Preference
            android:key="@string/associate_dropbox"
            android:title="@string/associate_dropbox_title" />
        // About
        <Preference android:title="@string/about">
            <intent android:action="com.daniel.mobilepauker2.activities.about" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>