<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/notifications">

    // Zeit abgelaufen
    <SwitchPreference
        android:defaultValue="@bool/show_timer_notification_default"
        android:key="@string/show_timer_notification"
        android:summary="@string/show_timer_notification_summ"
        android:title="@string/show_timer_notification_title" />
    // Karte abgelaufen
    <SwitchPreference
        android:defaultValue="@bool/show_card_notification_default"
        android:key="@string/show_card_notification"
        android:summary="@string/show_card_notification_summ"
        android:title="@string/show_card_notification_title" />
    // Zeit in Benachrichtigungsleiste anzeigen
    <SwitchPreference
        android:defaultValue="@bool/show_timer_bar_default"
        android:key="@string/show_timer_bar"
        android:summary="@string/channel_timerbar_description"
        android:title="@string/show_timer_bar_title" />
    //Klingelton für Benachrichtungen
    <Preference
        android:key="@string/ring_tone_preference"
        android:title="@string/ring_tone_preference_title" />
</PreferenceScreen>