<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/mSaveFile"
        android:icon="@drawable/menu_save_enabled"
        android:onClick="saveFile"
        android:orderInCategory="10"
        android:title="@string/save_lesson"
        app:showAsAction="always" />

    <item
        android:id="@+id/mOpenLesson"
        android:icon="@drawable/menu_open"
        android:onClick="openFile"
        android:orderInCategory="20"
        android:title="@string/open_lesson"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/mSearch"
        android:icon="@drawable/menu_search_enabled"
        android:onClick="openSearch"
        android:orderInCategory="30"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:onClick="editInfoText"
        android:orderInCategory="40"
        android:title="@string/edit_info_text" />

    <!-- TODO Implementieren -->
    <item
        android:onClick="resetLesson"
        android:orderInCategory="50"
        android:title="@string/reset_cards"
        android:visible="false"/>

    <item
        android:onClick="settings"
        android:orderInCategory="60"
        android:title="@string/settings" />

    <!-- TODO Implementieren -->
    <!-- TODO Main anpassen -->
    <group android:id="@+id/mGroup">
        <item
            android:onClick="newLesson"
            android:title="@string/new_lesson"
            android:visible="false" />
    </group>
</menu>